--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - id: foo
-        uses: actions/sample-composite-action@v2
+        uses: actions/sample-composite-action
         with:
           project-info: 'Sample project name here'
       - run: echo random-number ${{ steps.foo.outputs.random-number }}
