--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,12 +3,12 @@ on: [push]
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
-    name: A job that shows how to use composit actions
+    name: A job to say hello
     steps:
       - uses: actions/checkout@v3
       - id: foo
-        uses: actions/vinnimous/sample-composite-action@v3
+        uses: actions/hello-world-composite-action@v1
         with:
-          project-info: 'Sample project name here'
+          who-to-greet: 'Mona the Octocat'
       - run: echo random-number ${{ steps.foo.outputs.random-number }}
         shell: bash
