--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,14 @@
 on: [push]
 
 jobs:
-  hello_world_job:
+  my_little_job:
     runs-on: ubuntu-latest
-    name: A job to say hello
+    name: A simple sample of composite
     steps:
       - uses: actions/checkout@v3
       - id: foo
-        uses: vinnimous/hello-world-composite-action@v1
+        uses: vinnimous/sample-composite-action@v1
         with:
-          who-to-greet: 'Mona the Octocat'
+          project: 'Something'
       - run: echo random-number ${{ steps.foo.outputs.random-number }}
         shell: bash
